<resources>
    <string name="app_name">Registration Form</string>
    <string name="textView">Full Name</string>
    <string name="button">Register</string>
    <string name="textView3">Phone</string>
    <string name="textView5">Registration Form</string>
    <string name="textView6">Gender</string>
    <string name="radioButton3">Male</string>
    <string name="radioButton4">Female</string>
    <string name="textView7">Email</string>
    <string name="textView8">School ID</string>
    <string name="textView9">School</string>
</resources>